Virtual threads upgrade